--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,31 @@
 {
   "[dart]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
     "editor.defaultFormatter": "Dart-Code.dart-code",
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
-    "editor.insertSpaces": true
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true,
+      "source.organizeImports": true
+    },
   },
   "dart.lineLength": 80,
   "editor.rulers": [
     80
   ],
-  "dart.doNotFormat": []
+  "dart.doNotFormat": [
+    "**.g.dart"
+  ],
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.expand": false,
+  "explorer.fileNesting.patterns": {
+    "pubspec.yaml": ".flutter-plugins, .packages, .dart_tool, .flutter-plugins-dependencies, .metadata, .packages, pubspec.lock, build.yaml, analysis_options.yaml, all_lint_rules.yaml, flutter_*.yaml, icons_launcher.yaml",
+    ".gitignore": ".gitattributes, .gitmodules, .gitmessage, .mailmap, .git-blame*",
+    "readme.*": "authors, backers.md, changelog*, citation*, code_of_conduct.md, codeowners, contributing.md, contributors, copying, credits, governance.md, history.md, license*, maintainers, readme*, security.md, sponsors.md",
+    "*.dart": "$(capture).g.dart, $(capture).freezed.dart, $(capture).config.dart",
+    "*.graphql": "$(capture).gql.dart, $(capture).*.gql.dart",
+    "schema.graphql": "schema.schema.gql.dart",
+    "firebase.json": ".firebaserc"
+  },
 }
