--- a/.github/workflows/checkout.yml
+++ b/.github/workflows/checkout.yml
@@ -65,11 +65,11 @@ jobs:
         timeout-minutes: 1
         run: dart analyze --fatal-infos --fatal-warnings lib
 
-      #- name: 🧪 Run tests
-      #  timeout-minutes: 2
-      #  run: |
-      #    dart run coverage:test_with_coverage -fb -o coverage -- \
-      #      --concurrency=6 --platform vm --coverage=./coverage --reporter=expanded test/isolation_test.dart
+      - name: 🧪 Run tests
+        timeout-minutes: 2
+        run: |
+          dart run coverage:test_with_coverage -fb -o coverage -- \
+            --concurrency=6 --platform vm --coverage=./coverage --reporter=expanded test/isolation_test.dart
 
       #- name: 📥 Upload coverage to Codecov
       #  timeout-minutes: 1
