--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: |
   Websocket messages routing, statuses and other features have easy-to-use
   interface.
 
-version: 0.1.0-dev
+version: 0.1.0
 repository: https://github.com/dvmatyun/web_socket
 issue_tracker: https://github.com/dvmatyun/web_socket/issues
 homepage: https://github.com/dvmatyun/web_socket
