--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,12 @@
             "request": "launch",
             "type": "dart",
             "program": "example/main.dart",
+        },
+        {
+            "name": "example websocket_manager",
+            "request": "launch",
+            "type": "dart",
+            "program": "example_websocket_manager/main.dart",
         }
     ]
 }
