--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,22 @@ description: |
   Websocket messages routing, statuses and other features have easy-to-use
   interface.
 
-version: 1.1.1
+version: 1.2.0
 repository: https://github.com/dvmatyun/web_socket
 issue_tracker: https://github.com/dvmatyun/web_socket/issues
 homepage: https://github.com/dvmatyun/web_socket
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
   json_annotation: ^4.8.1
-  meta: ^1.8.0
+  meta: ^1.11.0
+  web_socket_channel: ^2.4.1
 
 dev_dependencies:
-  json_serializable: ^6.7.0
-  lints: ^2.1.1
-  build_runner: ^2.4.4
-  test: ^1.24.3
+  json_serializable: ^6.7.1
+  lints: ^3.0.0
+  build_runner: ^2.4.7
+  test: any
   coverage: any
